# hmpps-python-lib

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: push_libs.yml  tag_on_merged.yml
docs/: CLIENTS.md
docs/clients/: GithubSession.md
src/hmpps/: __init__.py  values.py
src/hmpps/clients/: github.py  service_catalogue.py  slack.py
src/hmpps/models/: alertmanager.py  repository_info.py
src/hmpps/services/: health_server.py
src/hmpps/utils/: utilities.py
